samples/glossentry/invalid/R11.dita
<?xml version="1.0" encoding="UTF-8"?>
<glossentry>
  <glossterm>Term</glossterm>
  <glossdef><p>Definition.</p></glossdef>
  <glossBody>
    <glossProperty>Prop1</glossProperty>
    <glossProperty>Prop2</glossProperty>
  </glossBody>
</glossentry>